FO-1863: Fikser layout issues på mobil.

--- a/src/components/del-med-nav-infopanel/DeltMedNavInfoPanel.less
+++ b/src/components/del-med-nav-infopanel/DeltMedNavInfoPanel.less
@@ -4,6 +4,7 @@
   height: 100%;
 
   .info-blokk {
+    flex: none;
 
     .spm-info {
       margin-top: 40px;
@@ -23,6 +24,7 @@
 
 
   .ikon-blokker {
+    flex: none;
     background-color: #FFFFFF;
 
     .justify-blokk {
